k8s/fastapi-migrated/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      imagePullSecrets:
        - name: ecr-registry           # ECR 인증 Secret
      containers:
        - name: fastapi
          image: 329599615061.dkr.ecr.ap-northeast-2.amazonaws.com/byhyeon:fastapi-latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
